--- a/main.css
+++ b/main.css
@@ -1,1 +1,56 @@
+*{ box-sizing: border-box;}
+body{
+  min-height: 100vh;
+  display:flex;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url("Output-1.png") 
+  }
 
+.container{
+  display:flex;
+  flex-wrap: wrap;
+  flex: 0 1 30%;
+  min-width:400px;
+  }
+
+.buttons,.result{
+  display: flex;
+  flex-wrap: wrap;
+  flex: 0 1 100%;
+  }
+.result{
+    height: 50px;
+    border: 2px solid red;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 1.5em;
+    background: rgb(179, 136, 19);
+    color:rgb(250, 250, 250);
+    padding:0 10px;
+    }
+.button{
+  display:flex;
+  flex: 0 1 25%;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border: 2px solid black;
+  border-top:none;
+  border-left:none;
+  cursor: pointer;
+  background: -webkit-linear-gradient(top,#d2d2d2,#ddd);
+  font-size:2em;
+  }
+.button:nth-child(4n+1){
+  border-left: 2px solid black;
+  }
+.button:nth-child(4n),.button:last-child{
+  background: #6b1991;
+  color: #fff;
+  }
+  .zero-btn{
+  flex-grow: 2;
+  }
+.doubleBordered{
+  border: 2px solid black; }
